--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello world</title>
+    <title>maiyue-onlyoffice-plugin</title>
     <script
       type="text/javascript"
       src="https://onlyoffc.maiyuesoft.cn/sdkjs-plugins/v1/plugins.js"
