--- a/debug/index.html
+++ b/debug/index.html
@@ -161,6 +161,7 @@
               cellIndex: 1,
               start: 0,
               end: 1,
+              replaceText:"替换"
             });
           });
         document
@@ -200,218 +201,227 @@
         document.getElementById("jump").addEventListener("click", function (e) {
           docEditor.serviceCommand("jumpToPositionByIndex", {
             type: "paragraph",
-            paragraphIndex: 5,
-            start: 1,
-            end: 10,
+   
+            start: 0,
+
+end: 28,
+
+paragraphIndex: 11,
+replaceText:'test',
+tableIndex: -1,
+
+rowIndex: -1,
+
+cellIndex: -1,
           });
         });
         document
           .getElementById("highlight")
           .addEventListener("click", function (e) {
             let list = [
-              {
-                content: "123",
+              // {
+              //   content: "123",
 
-                diffType: "INSERT",
+              //   diffType: "INSERT",
 
-                leftLoc: {
-                  start: 16,
+              //   leftLoc: {
+              //     start: 16,
 
-                  end: 17,
+              //     end: 17,
 
-                  paragraphIndex: 2,
+              //     paragraphIndex: 2,
 
-                  tableIndex: -1,
+              //     tableIndex: -1,
 
-                  rowIndex: -1,
+              //     rowIndex: -1,
 
-                  cellIndex: -1,
-                },
+              //     cellIndex: -1,
+              //   },
 
-                rightLoc: {
-                  start: 16,
+              //   rightLoc: {
+              //     start: 16,
 
-                  end: 20,
+              //     end: 20,
 
-                  paragraphIndex: 2,
+              //     paragraphIndex: 2,
 
-                  tableIndex: -1,
+              //     tableIndex: -1,
 
-                  rowIndex: -1,
+              //     rowIndex: -1,
 
-                  cellIndex: -1,
-                },
-              },
+              //     cellIndex: -1,
+              //   },
+              // },
 
-              {
-                content: "abc",
+              // {
+              //   content: "abc",
 
-                diffType: "INSERT",
+              //   diffType: "INSERT",
 
-                leftLoc: {
-                  start: 20,
+              //   leftLoc: {
+              //     start: 20,
 
-                  end: 21,
+              //     end: 21,
 
-                  paragraphIndex: 5,
+              //     paragraphIndex: 5,
 
-                  tableIndex: -1,
+              //     tableIndex: -1,
 
-                  rowIndex: -1,
+              //     rowIndex: -1,
 
-                  cellIndex: -1,
-                },
+              //     cellIndex: -1,
+              //   },
 
-                rightLoc: {
-                  start: 20,
+              //   rightLoc: {
+              //     start: 20,
 
-                  end: 24,
+              //     end: 24,
 
-                  paragraphIndex: 5,
+              //     paragraphIndex: 5,
 
-                  tableIndex: -1,
+              //     tableIndex: -1,
 
-                  rowIndex: -1,
+              //     rowIndex: -1,
 
-                  cellIndex: -1,
-                },
-              },
+              //     cellIndex: -1,
+              //   },
+              // },
 
-              {
-                content: "123",
+              // {
+              //   content: "123",
 
-                diffType: "INSERT",
+              //   diffType: "INSERT",
 
-                leftLoc: {
-                  start: 0,
+              //   leftLoc: {
+              //     start: 0,
 
-                  end: 0,
+              //     end: 0,
 
-                  paragraphIndex: 0,
+              //     paragraphIndex: 0,
 
-                  tableIndex: 0,
+              //     tableIndex: 0,
 
-                  rowIndex: 1,
+              //     rowIndex: 1,
 
-                  cellIndex: 1,
-                },
+              //     cellIndex: 1,
+              //   },
 
-                rightLoc: {
-                  start: 0,
+              //   rightLoc: {
+              //     start: 0,
 
-                  end: 3,
+              //     end: 3,
 
-                  paragraphIndex: 0,
+              //     paragraphIndex: 0,
 
-                  tableIndex: 0,
+              //     tableIndex: 0,
 
-                  rowIndex: 1,
+              //     rowIndex: 1,
 
-                  cellIndex: 5,
-                },
-              },
+              //     cellIndex: 5,
+              //   },
+              // },
 
-              {
-                content: "1",
+              // {
+              //   content: "1",
 
-                diffType: "DELETE",
+              //   diffType: "DELETE",
 
-                leftLoc: {
-                  start: 0,
+              //   leftLoc: {
+              //     start: 0,
 
-                  end: 1,
+              //     end: 1,
 
-                  paragraphIndex: 0,
+              //     paragraphIndex: 0,
 
-                  tableIndex: 0,
+              //     tableIndex: 0,
 
-                  rowIndex: 3,
+              //     rowIndex: 3,
 
-                  cellIndex: 4,
-                },
+              //     cellIndex: 4,
+              //   },
 
-                rightLoc: {
-                  start: 0,
+              //   rightLoc: {
+              //     start: 0,
 
-                  end: 2,
+              //     end: 2,
 
-                  paragraphIndex: 0,
+              //     paragraphIndex: 0,
 
-                  tableIndex: 0,
+              //     tableIndex: 0,
 
-                  rowIndex: 3,
+              //     rowIndex: 3,
 
-                  cellIndex: 4,
-                },
-              },
+              //     cellIndex: 4,
+              //   },
+              // },
 
-              {
-                content: "2",
+              // {
+              //   content: "2",
 
-                diffType: "INSERT",
+              //   diffType: "INSERT",
 
-                leftLoc: {
-                  start: 0,
+              //   leftLoc: {
+              //     start: 0,
 
-                  end: 0,
+              //     end: 0,
 
-                  paragraphIndex: 0,
+              //     paragraphIndex: 0,
 
-                  tableIndex: 0,
+              //     tableIndex: 0,
 
-                  rowIndex: 3,
+              //     rowIndex: 3,
 
-                  cellIndex: 4,
-                },
+              //     cellIndex: 4,
+              //   },
 
-                rightLoc: {
-                  start: 0,
+              //   rightLoc: {
+              //     start: 0,
 
-                  end: 1,
+              //     end: 1,
 
-                  paragraphIndex: 0,
+              //     paragraphIndex: 0,
 
-                  tableIndex: 0,
+              //     tableIndex: 0,
 
-                  rowIndex: 3,
+              //     rowIndex: 3,
 
-                  cellIndex: 4,
-                },
-              },
+              //     cellIndex: 4,
+              //   },
+              // },
 
-              {
-                content: "123",
+              // {
+              //   content: "123",
 
-                diffType: "INSERT",
+              //   diffType: "INSERT",
 
-                leftLoc: {
-                  start: 0,
+              //   leftLoc: {
+              //     start: 0,
 
-                  end: 1,
+              //     end: 1,
 
-                  paragraphIndex: 0,
+              //     paragraphIndex: 0,
 
-                  tableIndex: 0,
+              //     tableIndex: 0,
 
-                  rowIndex: 3,
+              //     rowIndex: 3,
 
-                  cellIndex: 4,
-                },
+              //     cellIndex: 4,
+              //   },
 
-                rightLoc: {
-                  start: 0,
+              //   rightLoc: {
+              //     start: 0,
 
-                  end: 3,
+              //     end: 3,
 
-                  paragraphIndex: 0,
+              //     paragraphIndex: 0,
 
-                  tableIndex: 0,
+              //     tableIndex: 0,
 
-                  rowIndex: 4,
+              //     rowIndex: 4,
 
-                  cellIndex: 5,
-                },
-              },
+              //     cellIndex: 5,
+              //   },
+              // },
 
               {
                 content: "cccc",
@@ -447,39 +457,39 @@
                 },
               },
 
-              {
-                content: "ddd",
+              // {
+              //   content: "ddd",
 
-                diffType: "INSERT",
+              //   diffType: "INSERT",
 
-                leftLoc: {
-                  start: 19,
+              //   leftLoc: {
+              //     start: 19,
 
-                  end: 20,
+              //     end: 20,
 
-                  paragraphIndex: 13,
+              //     paragraphIndex: 13,
 
-                  tableIndex: -1,
+              //     tableIndex: -1,
 
-                  rowIndex: -1,
+              //     rowIndex: -1,
 
-                  cellIndex: -1,
-                },
+              //     cellIndex: -1,
+              //   },
 
-                rightLoc: {
-                  start: 19,
+              //   rightLoc: {
+              //     start: 19,
 
-                  end: 23,
+              //     end: 23,
 
-                  paragraphIndex: 12,
+              //     paragraphIndex: 12,
 
-                  tableIndex: -1,
+              //     tableIndex: -1,
 
-                  rowIndex: -1,
+              //     rowIndex: -1,
 
-                  cellIndex: -1,
-                },
-              },
+              //     cellIndex: -1,
+              //   },
+              // },
             ];
             // for (let i = 0; i < list.length; i++) {
             //   let item = list[i].leftLoc;
